--- a/assets/i18n/en-GB.json
+++ b/assets/i18n/en-GB.json
@@ -108,6 +108,7 @@
       }
     },
     "sections": {
+      "sessionActions": "Session actions",
       "sessionDetails": "Session details",
       "sessionStatistics": "Session statistics"
     },
